Markdown Rendering Enabled

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>My Markdown Blog</h1>
+<hr>
+<% @posts.each do |post| %>
+	<h1><%= link_to post.title, post %></h1>
+
+	<p>
+		<%= markdown(post.body) %>
+	</p>
+	<h5>Published <%= time_ago_in_words post.published_at %> ago</h5>
+
+	<% if post != @posts.last %>
+		<hr>
+	<% end %>
+<% end %>
