--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<h1><%= @post.title %></h1>
+<hr>
+
+<p>
+	<%= markdown(@post.body) %>
+</p>
+<h4>Published <%= time_ago_in_words @post.published_at %> ago</h4>
+<%= link_to "Back To Index", posts_path %>
