--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,4 +5,5 @@
 	<%= markdown(@post.body) %>
 </p>
 <h4>Published <%= time_ago_in_words @post.published_at %> ago</h4>
+<%= link_to 'Edit', edit_path %>
 <%= link_to "Back To Index", posts_path %>
